--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,6 @@ body {
 	transform: translate3d(0, 0, 0);
 }
 
-#noise {
-	position: fixed;
-	opacity: 0.5;
-	z-index: 5;
-	width: 100%;
-	height: 100%;
-}
-
 header {
 	position: absolute;
 	top: 0.625em;
@@ -93,13 +85,11 @@ main {
 #content > .jp {
 	margin-right: -0.5425em;
 	margin-bottom: 0.125em;
-	font-size: 3rem;
 	font-size: min(max(1.5rem, 6vmin), 3rem);
 }
 
 #content > .en {
 	opacity: 0.5;
-	font-size: 1.25rem;
 	font-size: min(max(0.75rem, 3vmin), 1.5rem);
 }
 
@@ -142,6 +132,6 @@ main {
 	mask-image: linear-gradient(to left, rgb(255 255 255 / 100%) 0%, rgb(255 255 255 / 0%) 25%, rgb(255 255 255 / 0%) 75%, rgb(255 255 255 / 100%) 100%);
 }
 
-html.no-webp #bg > div {
+.no-webp #bg > div {
 	background-image: url("../img/bg.png");
 }
